<resources>
    <string name="app_name">Rain</string>
    <string name="name">name:</string>
    <string name="address">address:</string>
    <string name="tel">tel:</string>
    <string name="favourite">favourite:</string>
    <string name="price">price:</string>
    <string name="redPackageNum">红包个数:</string>
    <string name="inputRedPackageNum">填写个数</string>
    <string name="num">个</string>
    <string name="dollar">元</string>
    <string name="inputRedpackagePrice">填写金额</string>
    <string name="redPackagePrice">红包金额</string>
</resources>
