<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7463a"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#f5e1be"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redPackageNum"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/inputRedPackageNum"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#f5e1be"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redPackagePrice"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/inputRedpackagePrice"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_blessing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#f5e1be"
        android:gravity="center"
        android:hint="恭喜发财 红包拿来"
        android:maxLength="25"/>

    <Button
        android:id="@+id/btn_send_money"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="发红包"
        android:textColor="#f7463a"
        android:textSize="30sp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_send_redpackage"/>

    <ListView
        android:id="@+id/lv_redpackage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#f5e1be"
        android:visibility="invisible"/>

</LinearLayout>
