<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_restaurant_name"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="店家名称" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_restaurant_address"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="地址" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_restaurant_tel"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:hint="电话" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favourite"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_restaurant_favourite"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="招牌" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_restaurant_price"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:hint="人均" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_restaurant"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="增" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="删" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="改" />

        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="查" />

    </LinearLayout>

</LinearLayout>
